Starting work on Tesselation

--- a/Dependencies/imgui/examples/example_glfw_opengl3/imgui.ini
+++ b/Dependencies/imgui/examples/example_glfw_opengl3/imgui.ini
@@ -4,12 +4,12 @@ Size=400,400
 Collapsed=0
 
 [Window][Dear ImGui Demo]
-Pos=418,123
-Size=472,557
+Pos=-5,0
+Size=487,724
 Collapsed=0
 
 [Window][Hello, world!]
-Pos=871,68
+Pos=941,3
 Size=339,180
 Collapsed=0
 
@@ -21,5 +21,10 @@ Collapsed=0
 [Window][Dear ImGui Style Editor]
 Pos=12,-6
 Size=353,714
+Collapsed=0
+
+[Window][Example: Documents]
+Pos=60,60
+Size=621,714
 Collapsed=0
 
