--- a/SettingUpOpenGL.vcxproj
+++ b/SettingUpOpenGL.vcxproj
@@ -161,7 +161,10 @@
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="BaseApplication.cpp" />
-    <ClCompile Include="Camera.cpp" />
+    <ClCompile Include="LightAndShadow\PointLight.cpp" />
+    <ClCompile Include="Viewing\OrthographicCamera.cpp" />
+    <ClCompile Include="Viewing\PerspectiveCamera.cpp" />
+    <ClCompile Include="Viewing\Camera.cpp" />
     <ClCompile Include="Cube.cpp" />
     <ClCompile Include="Dependencies\imgui\backends\imgui_impl_glfw.cpp" />
     <ClCompile Include="Dependencies\imgui\backends\imgui_impl_opengl3.cpp" />
@@ -180,6 +183,7 @@
   <ItemGroup>
     <None Include="imgui.ini" />
     <None Include="Shaders\FragmentShader.glsl" />
+    <None Include="Shaders\GeometryShader.glsl" />
     <None Include="Shaders\TessellationControlShader.glsl" />
     <None Include="Shaders\TessellationEvaluationShader.glsl" />
     <None Include="Shaders\VertexShader.glsl" />
@@ -187,7 +191,10 @@
   <ItemGroup>
     <ClInclude Include="Application.h" />
     <ClInclude Include="BaseApplication.h" />
-    <ClInclude Include="Camera.h" />
+    <ClInclude Include="LightAndShadow\PointLight.h" />
+    <ClInclude Include="Viewing\OrthographicCamera.h" />
+    <ClInclude Include="Viewing\PerspectiveCamera.h" />
+    <ClInclude Include="Viewing\Camera.h" />
     <ClInclude Include="Cube.h" />
     <ClInclude Include="Dependencies\imgui\backends\imgui_impl_glfw.h" />
     <ClInclude Include="Dependencies\imgui\backends\imgui_impl_opengl3.h" />
