--- a/imgui.ini
+++ b/imgui.ini
@@ -19,23 +19,53 @@ Size=339,180
 Collapsed=0
 
 [Window][Side panel]
-Pos=949,1
-Size=331,670
+Pos=1569,0
+Size=352,1005
 Collapsed=0
 
 [Window][Menu Bar]
-Pos=0,-1
-Size=949,257
+Pos=0,0
+Size=160,173
 Collapsed=0
 
 [Window][Animation panel]
-Pos=0,670
-Size=1281,50
+Pos=-1,1005
+Size=1926,56
 Collapsed=0
 
 [Window][Another Window]
 Pos=943,299
 Size=198,71
+Collapsed=0
+
+[Window][Gui in App->OnRender]
+Pos=956,46
+Size=363,171
+Collapsed=0
+
+[Window][Camera Utility]
+Pos=1,174
+Size=406,832
+Collapsed=0
+
+[Window][Cube]
+Pos=1087,0
+Size=482,67
+Collapsed=0
+
+[Window][Viewing]
+Pos=-2,170
+Size=385,835
+Collapsed=0
+
+[Window][Lights and Shadow]
+Pos=-3,576
+Size=341,430
+Collapsed=0
+
+[Window][File | Edit]
+Pos=0,1
+Size=383,172
 Collapsed=0
 
 [Table][0x82CBB907,3]
