--- a/imgui.ini
+++ b/imgui.ini
@@ -19,8 +19,8 @@ Size=339,180
 Collapsed=0
 
 [Window][Side panel]
-Pos=1569,0
-Size=352,1005
+Pos=1569,2
+Size=356,1004
 Collapsed=0
 
 [Window][Menu Bar]
@@ -49,12 +49,12 @@ Size=406,832
 Collapsed=0
 
 [Window][Cube]
-Pos=1087,0
+Pos=1090,1
 Size=482,67
 Collapsed=0
 
 [Window][Viewing]
-Pos=-2,170
+Pos=-1,173
 Size=385,835
 Collapsed=0
 
@@ -64,8 +64,23 @@ Size=341,430
 Collapsed=0
 
 [Window][File | Edit]
-Pos=0,1
+Pos=0,0
 Size=383,172
+Collapsed=0
+
+[Window][Frame Rate]
+Pos=382,1
+Size=705,66
+Collapsed=0
+
+[Window][Stats And Performance]
+Pos=1571,1
+Size=358,1036
+Collapsed=0
+
+[Window][Utilities]
+Pos=0,172
+Size=383,832
 Collapsed=0
 
 [Table][0x82CBB907,3]
