--- a/SettingUpOpenGL.vcxproj
+++ b/SettingUpOpenGL.vcxproj
@@ -161,11 +161,15 @@
   <ItemGroup>
     <ClCompile Include="Engine\Application.cpp" />
     <ClCompile Include="Engine\BaseApplication.cpp" />
+    <ClCompile Include="Engine\Layer.cpp" />
     <ClCompile Include="LightAndShadow\PointLight.cpp" />
     <ClCompile Include="Rendering\Renderer.cpp" />
     <ClCompile Include="Rendering\Grid.cpp" />
     <ClCompile Include="Rendering\Scene.cpp" />
     <ClCompile Include="Rendering\Shader.cpp" />
+    <ClCompile Include="Engine\TimeStep.cpp" />
+    <ClCompile Include="Rendering\Square.cpp" />
+    <ClCompile Include="Engine\UILayer.cpp" />
     <ClCompile Include="Viewing\OrthographicCamera.cpp" />
     <ClCompile Include="Viewing\PerspectiveCamera.cpp" />
     <ClCompile Include="Viewing\Camera.cpp" />
@@ -194,15 +198,21 @@
     <None Include="Shaders\Cube\VertexShader.glsl" />
     <None Include="Shaders\Grid\FragmentShader.glsl" />
     <None Include="Shaders\Grid\VertexShader.glsl" />
+    <None Include="Shaders\Square\FragmentShader.glsl" />
+    <None Include="Shaders\Square\VertexShader.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Engine\Application.h" />
     <ClInclude Include="Engine\BaseApplication.h" />
+    <ClInclude Include="Engine\Layer.h" />
     <ClInclude Include="LightAndShadow\PointLight.h" />
     <ClInclude Include="Rendering\Renderer.h" />
     <ClInclude Include="Rendering\Grid.h" />
     <ClInclude Include="Rendering\Scene.h" />
     <ClInclude Include="Rendering\Shader.h" />
+    <ClInclude Include="Engine\TimeStep.h" />
+    <ClInclude Include="Rendering\Square.h" />
+    <ClInclude Include="Engine\UILayer.h" />
     <ClInclude Include="Viewing\OrthographicCamera.h" />
     <ClInclude Include="Viewing\PerspectiveCamera.h" />
     <ClInclude Include="Viewing\Camera.h" />
