--- a/SettingUpOpenGL.vcxproj.filters
+++ b/SettingUpOpenGL.vcxproj.filters
@@ -18,10 +18,10 @@
     <ClCompile Include="Engine\BaseApplication.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Rendering\Cube.cpp">
+    <ClCompile Include="Application\Cube.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Engine\Application.cpp">
+    <ClCompile Include="Application\Application.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Viewing\Camera.cpp">
@@ -75,7 +75,7 @@
     <ClCompile Include="LightAndShadow\PointLight.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Rendering\Grid.cpp">
+    <ClCompile Include="Application\Grid.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Rendering\Scene.cpp">
@@ -84,19 +84,34 @@
     <ClCompile Include="Rendering\Renderer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Rendering\Shader.cpp">
+    <ClCompile Include="Materials\Shader.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Engine\TimeStep.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Rendering\Square.cpp">
+    <ClCompile Include="Application\Square.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Engine\Layer.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="Engine\UILayer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Rendering\VertexArray.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\Teaport.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\Teaport.h">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Application\Tank.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Materials\Material.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
@@ -112,6 +127,8 @@
     <None Include="Shaders\Grid\FragmentShader.glsl" />
     <None Include="Shaders\Square\VertexShader.glsl" />
     <None Include="Shaders\Square\FragmentShader.glsl" />
+    <None Include="Shaders\RndVertexShader.glsl" />
+    <None Include="Shaders\RndFragmentShader.glsl" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stb_image.h">
@@ -120,10 +137,10 @@
     <ClInclude Include="Engine\BaseApplication.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Rendering\Cube.h">
+    <ClInclude Include="Application\Cube.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Engine\Application.h">
+    <ClInclude Include="Application\Application.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Viewing\Camera.h">
@@ -183,7 +200,7 @@
     <ClInclude Include="LightAndShadow\PointLight.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Rendering\Grid.h">
+    <ClInclude Include="Application\Grid.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Rendering\Scene.h">
@@ -192,19 +209,28 @@
     <ClInclude Include="Rendering\Renderer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Rendering\Shader.h">
+    <ClInclude Include="Materials\Shader.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\TimeStep.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Rendering\Square.h">
+    <ClInclude Include="Application\Square.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\Layer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Engine\UILayer.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Rendering\VertexArray.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Application\Tank.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Materials\Material.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
