--- a/SettingUpOpenGL.vcxproj.filters
+++ b/SettingUpOpenGL.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClCompile Include="Materials\Material.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Materials\Texture.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <None Include="Shaders\Cube\VertexShader.glsl" />
@@ -231,6 +234,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Materials\Material.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="Materials\Texture.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
