--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=60,60
-Size=400,400
+Pos=-2,-23
+Size=385,197
 Collapsed=0
 
 [Window][Hello ImGui]
@@ -29,7 +29,7 @@ Size=160,173
 Collapsed=0
 
 [Window][Animation panel]
-Pos=-1,1005
+Pos=0,1004
 Size=1926,56
 Collapsed=0
 
@@ -74,13 +74,13 @@ Size=705,66
 Collapsed=0
 
 [Window][Stats And Performance]
-Pos=1556,0
-Size=363,1068
+Pos=1562,-7
+Size=359,1065
 Collapsed=0
 
 [Window][Utilities]
-Pos=0,173
-Size=383,832
+Pos=2,173
+Size=382,832
 Collapsed=0
 
 [Table][0x82CBB907,3]
