--- a/imgui.ini
+++ b/imgui.ini
@@ -1,6 +1,6 @@
 [Window][Debug##Default]
-Pos=-2,-23
-Size=385,197
+Pos=-5,-18
+Size=386,197
 Collapsed=0
 
 [Window][Hello ImGui]
@@ -74,13 +74,18 @@ Size=705,66
 Collapsed=0
 
 [Window][Stats And Performance]
-Pos=1561,0
-Size=359,1065
+Pos=1561,-1
+Size=354,1065
 Collapsed=0
 
 [Window][Utilities]
-Pos=1,175
-Size=382,885
+Pos=0,180
+Size=381,885
+Collapsed=0
+
+[Window][Gizmo]
+Pos=400,20
+Size=800,400
 Collapsed=0
 
 [Table][0x82CBB907,3]
